// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index adapt V1 query 1`] = `
Array [
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k3": "v3",
          },
        ],
      },
    },
  },
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k4": "v4",
          },
        ],
      },
    },
  },
]
`;

exports[`index flat result model 1`] = `
Array [
  Object {
    "D": Object {
      "k1": "v1",
    },
  },
  Object {
    "D": Object {
      "k2": "v2",
    },
  },
]
`;

exports[`index full_refresh sync mode 1`] = `
Array [
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k1": "v1",
          },
        ],
      },
    },
  },
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k2": "v2",
          },
        ],
      },
    },
  },
]
`;

exports[`index incremental sync mode - V1 1`] = `
Array [
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k1": "v1",
          },
        ],
      },
    },
  },
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k2": "v2",
          },
        ],
      },
    },
  },
]
`;

exports[`index incremental sync mode - V2 1`] = `
Array [
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k1": "v1",
          },
        ],
      },
    },
  },
  Object {
    "A": Object {
      "B": Object {
        "C": Array [
          Object {
            "k2": "v2",
          },
        ],
      },
    },
  },
]
`;

exports[`index replace node IDs with model keys 1`] = `
Array [
  Object {
    "cicd_ArtifactCommit": Object {
      "artifact": Cicd_Artifact__Key {
        "repository": Cicd_Repository__Key {
          "organization": Cicd_Organization__Key {
            "source": "Mock",
            "uid": "faros-ai",
          },
          "uid": "solaris",
        },
        "uid": "0",
      },
      "commit": Vcs_Commit__Key {
        "repository": Vcs_Repository__Key {
          "name": "solaris",
          "organization": Vcs_Organization__Key {
            "source": "Mock",
            "uid": "faros-ai",
          },
        },
        "sha": "0",
      },
      "id": "PGNpY2RfQXJ0aWZhY3RDb21taXRBc3NvY2lhdGlvbnwCAgICCE1vY2sCEGZhcm9zLWFpAg5zb2xhcmlzAgIwAgICDnNvbGFyaXMCAghNb2NrAhBmYXJvcy1haQICMA==",
    },
  },
]
`;
